core/jaeger/apps_v1_Deployment_jaeger-operator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    name: jaeger-operator
  name: jaeger-operator
  namespace: vinyl-monitor
spec:
  replicas: 1
  selector:
    matchLabels:
      name: jaeger-operator
  strategy: {}
  template:
    metadata:
      labels:
        name: jaeger-operator
    spec:
      containers:
      - args:
        - start
        - --health-probe-bind-address=:8081
        - --leader-elect
        command:
        - /jaeger-operator
        image: quay.io/jaegertracing/jaeger-operator:1.53.0
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8081
          initialDelaySeconds: 15
          periodSeconds: 20
        name: jaeger-operator
        ports:
        - containerPort: 9443
          name: webhook-server
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /readyz
            port: 8081
          initialDelaySeconds: 5
          periodSeconds: 10
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
        securityContext:
          allowPrivilegeEscalation: false
        volumeMounts:
        - mountPath: /tmp/k8s-webhook-server/serving-certs
          name: cert
          readOnly: true
      - args:
        - --secure-listen-address=0.0.0.0:8443
        - --upstream=http://127.0.0.1:8383/
        - --logtostderr=true
        - --v=0
        image: gcr.io/kubebuilder/kube-rbac-proxy:v0.13.1
        name: kube-rbac-proxy
        ports:
        - containerPort: 8443
          name: https
          protocol: TCP
        resources:
          limits:
            cpu: 500m
            memory: 128Mi
          requests:
            cpu: 5m
            memory: 64Mi
      securityContext:
        runAsNonRoot: true
      serviceAccountName: jaeger-operator
      terminationGracePeriodSeconds: 10
      volumes:
      - name: cert
        secret:
          defaultMode: 420
          secretName: jaeger-operator-service-cert
