core/jaeger/v1_Service_jaeger-operator-metrics.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: metrics
    name: jaeger-operator
  name: jaeger-operator-metrics
  namespace: vinyl-monitor
spec:
  ports:
  - name: https
    port: 8443
    protocol: TCP
    targetPort: https
  selector:
    name: jaeger-operator
