core/jaeger/v1_Service_jaeger-operator-webhook-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: jaeger-operator
  name: jaeger-operator-webhook-service
  namespace: vinyl-monitor
spec:
  ports:
  - port: 443
    protocol: TCP
    targetPort: 9443
  selector:
    name: jaeger-operator
